# bulky

./: README.md  bulky.cabal
src/: Bulky.hs  Main.hs
src/Bulky/: Internal.hs
test/: BulkySpec.hs
