Name:                   bulky
Version:                0.0.0
Author:                 Andrew Raines <andrew@raines.me>
Maintainer:             Andrew Raines <andrew@raines.me>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

-- Library
--   Default-Language:     Haskell2010
--   HS-Source-Dirs:       src
--   GHC-Options:          -Wall
--   Exposed-Modules:      Bulky
--   Other-Modules:        Bulky.Internal
--   Build-Depends:        base >= 4 && < 5
--                         , split
--                  , cmdargs

Executable bulky
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  Main-is: Main.hs
  Ghc-options: -threaded
  Build-depends: base >= 4 && < 5
                 , split
                 , cmdargs
                 , aeson
                 , text
                 , bytestring
                 , containers
                 , unordered-containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
